--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,16 +1,20 @@
 <resources>
 
     <string name="app_name">Rose Widgets</string>
-    <string name="hint_username">Rose-Hulman username</string>
+    <string name="hint_username_netreg">Rose-Hulman username</string>
+    <string name="hint_username_db">CampusDish email</string>
     <string name="hint_password">Password</string>
     <string name="loading">Loading&#8230;</string>
     <string name="authing">Authenticating&#8230;</string>
     <string name="no_network">No connection</string>
     <string name="megabytes">%1$,.0f Mb</string>
     <string name="title_error">Unable to authenticate</string>
+
     <string name="notification_exceeded_title">Bandwidth restricted to %1$s</string>
     <string name="notification_exceeded_content">%1$,.0f Mb used of %2$,.0f Mb</string>
     <string name="notification_unrestricted_title">Bandwidth unrestricted</string>
     <string name="notification_unrestricted_content">%1$,.0f Mb used</string>
 
+    <string name="widget_name_netreg">Rose-Hulman bandwidth usage</string>
+    <string name="widget_name_db">Rose-Hulman DB balance</string>
 </resources>
